@@ -30,7 +30,7 @@ library
         filepath,
         time >= 1.5,
         directory >= 1.2,
-        extra >= 1.2,
+        extra >= 1.6.6,
         process >= 1.1,
         ansi-terminal,
         cmdargs >= 0.10
@@ -56,7 +56,7 @@ executable ghcid
         directory >= 1.2,
         containers,
         fsnotify,
-        extra >= 1.2,
+        extra >= 1.6.6,
         process >= 1.1,
         cmdargs >= 0.10,
         ansi-terminal,
@@ -90,7 +90,7 @@ test-suite ghcid_test
         process,
         containers,
         fsnotify,
-        extra >= 1.2,
+        extra >= 1.6.6,
         ansi-terminal,
         terminal-size >= 0.3,
         cmdargs,
